@@ -7,7 +7,7 @@ Release 1.1a1 - WIP
 
     * Small improvements in change password page for administrators.
     * Legacy MySQL-based SMS accounting / logging was removed.
-    * SMS send and recieve overhaul. Allows sending and receiving SMS in a
+    * SMS send and receive overhaul. Allows sending and receiving SMS in a
       variety of ways: talking directly with a Kannel SMS gateway, or using
       an intermediary JSON-RPC web service.
     * Many bugfixes and improvements in reset password ("I have forgotten my 
@@ -15,3 +15,5 @@ Release 1.1a1 - WIP
     * Improvements and bugfixes in initial setup script (setup.php); administrator
       can choose setup language and the new SMS arguments are there.
     * The key for symmetric encryption of password must now be base64 encoded.
+    * ReCAPTCHA settings can now be empty and no CAPTCHA will be requested in
+      login / reset password forms.
